src/test/ui/feature-gates/feature-gate-wasm_abi.rs
extern "wasm" fn foo() {
    //~^ ERROR: wasm ABI is experimental and subject to change
}

fn main() {
    foo();
}
